fix cicd
